fix: fix bug in login doc
